Umstellung auf nächste Hauptversion der Basissoftware ShapeChange
Signed-off-by: Johannes Echterhoff <echterhoff@interactive-instruments.de>